project(iceclient)
cmake_minimum_required(VERSION 2.6)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

target_link_libraries(${PROJECT_NAME} libpjnath-x86_64-unknown-linux-gnu.a)
target_link_libraries(${PROJECT_NAME} libpjlib-util-x86_64-unknown-linux-gnu.a)
target_link_libraries(${PROJECT_NAME} libpj-x86_64-unknown-linux-gnu.a)
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} uuid)
target_link_libraries(${PROJECT_NAME} m)
target_link_libraries(${PROJECT_NAME} rt)
